fix: footer horizontal overflow

--- a/files/styles/subpage.css
+++ b/files/styles/subpage.css
@@ -82,13 +82,16 @@ h2 {
 }
 
 .bottom {
-  height: 20px;
+  left: 0%;
+  bottom: 0%;
   width: 100%;
+  height: 20px;
   background-color: #23272A;
   border-radius: 6px;
   text-align: center;
   color: white;
-  padding: 5px 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   font-family: "Baloo Tamma 2";
 }
 
